@@ -1,5 +1,8 @@
 2008-04-17  Volker Reichelt  <v.reichelt@netcologne.de>
 
+	PR c/35744
+	* attribs.c (decl_attributes): Return early on errorneous node.
+
 	PR c/35436
 	* c-format.c (init_dynamic_gfc_info): Ignore invalid locus type.
 
